feat(fullstack): Data Health Dashboard Refresh (#5933)