@@ -2,11 +2,15 @@ package com.linkedin.datahub.graphql.resolvers.health;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
+import com.linkedin.common.AssertionSummaryDetails;
 import com.linkedin.common.AssertionsSummary;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.datahub.graphql.QueryContext;
 import com.linkedin.datahub.graphql.concurrency.GraphQLConcurrencyUtils;
+import com.linkedin.datahub.graphql.generated.ActiveIncidentHealthDetails;
+import com.linkedin.datahub.graphql.generated.AssertionHealthStatusByType;
+import com.linkedin.datahub.graphql.generated.AssertionType;
 import com.linkedin.datahub.graphql.generated.Entity;
 import com.linkedin.datahub.graphql.generated.Health;
 import com.linkedin.datahub.graphql.generated.HealthStatus;
@@ -14,20 +18,24 @@ import com.linkedin.datahub.graphql.generated.HealthStatusType;
 import com.linkedin.datahub.graphql.generated.IncidentState;
 import com.linkedin.entity.EntityResponse;
 import com.linkedin.entity.client.EntityClient;
+import com.linkedin.incident.IncidentInfo;
 import com.linkedin.metadata.Constants;
 import com.linkedin.metadata.query.filter.Filter;
+import com.linkedin.metadata.query.filter.SortCriterion;
+import com.linkedin.metadata.query.filter.SortOrder;
 import com.linkedin.metadata.search.SearchResult;
 import com.linkedin.metadata.search.utils.QueryUtils;
 import com.linkedin.r2.RemoteInvocationException;
 import graphql.schema.DataFetcher;
 import graphql.schema.DataFetchingEnvironment;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import lombok.AllArgsConstructor;
@@ -117,23 +125,75 @@ public class AcrylEntityHealthResolver implements DataFetcher<CompletableFuture<
       final Filter filter = buildIncidentsEntityFilter(entityUrn, IncidentState.ACTIVE.toString());
       final SearchResult searchResult =
           _entityClient.filter(
-              context.getOperationContext(), Constants.INCIDENT_ENTITY_NAME, filter, null, 0, 1);
+              context.getOperationContext(),
+              Constants.INCIDENT_ENTITY_NAME,
+              filter,
+              buildIncidentsSort(),
+              0,
+              1);
       final Integer activeIncidentCount = searchResult.getNumEntities();
+
+      final Health.Builder healthBuilder = new Health.Builder().setType(HealthStatusType.INCIDENTS);
       if (activeIncidentCount > 0) {
+        final Urn latestIncidentUrn = searchResult.getEntities().get(0).getEntity();
+        final IncidentInfo latestIncidentInfo = getIncidentInfo(context, latestIncidentUrn);
+        final Long latestIncidentTimestamp =
+            latestIncidentInfo != null
+                ? latestIncidentInfo.getStatus().getLastUpdated().getTime()
+                : null;
         // There are active incidents.
-        return new Health(
-            HealthStatusType.INCIDENTS,
-            HealthStatus.FAIL,
+        healthBuilder.setReportedAt(latestIncidentTimestamp != null ? latestIncidentTimestamp : 0);
+        healthBuilder.setStatus(HealthStatus.FAIL);
+        healthBuilder.setMessage(
             String.format(
-                "%s active incident%s", activeIncidentCount, activeIncidentCount > 1 ? "s" : ""),
-            ImmutableList.of("ACTIVE_INCIDENTS"));
+                "%s active incident%s", activeIncidentCount, activeIncidentCount > 1 ? "s" : ""));
+        healthBuilder.setCauses(ImmutableList.of("ACTIVE_INCIDENTS"));
+        healthBuilder.setActiveIncidentHealthDetails(
+            new ActiveIncidentHealthDetails(
+                latestIncidentUrn.toString(),
+                latestIncidentInfo != null ? latestIncidentInfo.getTitle() : null,
+                latestIncidentTimestamp,
+                activeIncidentCount));
+        return healthBuilder.build();
       }
       // Report pass if there are no active incidents.
-      return new Health(HealthStatusType.INCIDENTS, HealthStatus.PASS, null, null);
+      healthBuilder.setStatus(HealthStatus.PASS);
+      return healthBuilder.build();
     } catch (RemoteInvocationException e) {
       log.error("Failed to compute incident health status!", e);
       return null;
+    } catch (URISyntaxException e) {
+      log.error(
+          String.format(
+              "Failed to compute incident health status for entity %s! Invalid URN.", entityUrn),
+          e);
+      return null;
     }
+  }
+
+  @Nullable
+  private IncidentInfo getIncidentInfo(final QueryContext context, final Urn incidentUrn)
+      throws URISyntaxException, RemoteInvocationException {
+    final EntityResponse entityResponse =
+        _entityClient.getV2(
+            context.getOperationContext(),
+            Constants.INCIDENT_ENTITY_NAME,
+            incidentUrn,
+            Set.of(Constants.INCIDENT_INFO_ASPECT_NAME),
+            false);
+
+    if (entityResponse == null) {
+      return null;
+    }
+    if (!entityResponse.getAspects().containsKey(Constants.INCIDENT_INFO_ASPECT_NAME)) {
+      return null;
+    }
+    return new IncidentInfo(
+        entityResponse.getAspects().get(Constants.INCIDENT_INFO_ASPECT_NAME).getValue().data());
+  }
+
+  private List<SortCriterion> buildIncidentsSort() {
+    return List.of(new SortCriterion().setOrder(SortOrder.DESCENDING).setField("lastUpdated"));
   }
 
   private Filter buildIncidentsEntityFilter(final String entityUrn, final String state) {
@@ -166,15 +226,24 @@ public class AcrylEntityHealthResolver implements DataFetcher<CompletableFuture<
 
       final int failingAssertionCount =
           summary.hasFailingAssertionDetails() ? summary.getFailingAssertionDetails().size() : 0;
+      final int erroringAssertionCount =
+          summary.hasErroringAssertionDetails() ? summary.getErroringAssertionDetails().size() : 0;
       final int passingAssertionCount =
           summary.hasPassingAssertionDetails() ? summary.getPassingAssertionDetails().size() : 0;
-      final int totalAssertionCount = failingAssertionCount + passingAssertionCount;
+      final int totalAssertionCount =
+          failingAssertionCount + erroringAssertionCount + passingAssertionCount;
 
       final List<String> failingAssertionUrns =
           summary.hasFailingAssertionDetails()
               ? summary.getFailingAssertionDetails().stream()
                   .map(details -> details.getUrn().toString())
-                  .collect(Collectors.toList())
+                  .toList()
+              : Collections.emptyList();
+      final List<String> erroringAssertionUrns =
+          summary.hasErroringAssertionDetails()
+              ? summary.getErroringAssertionDetails().stream()
+                  .map(details -> details.getUrn().toString())
+                  .toList()
               : Collections.emptyList();
 
       // Finally compute & return the health.
@@ -187,14 +256,102 @@ public class AcrylEntityHealthResolver implements DataFetcher<CompletableFuture<
                 "%s of %s assertions are failing",
                 failingAssertionUrns.size(), totalAssertionCount));
         health.setCauses(failingAssertionUrns);
+        final Long latestFailingAssertionRun =
+            Collections.max(
+                summary.getFailingAssertionDetails().stream()
+                    .map(AssertionSummaryDetails::getLastResultAt)
+                    .toList());
+        health.setReportedAt(latestFailingAssertionRun);
+      } else if (erroringAssertionUrns.size() > 0) {
+        health.setStatus(HealthStatus.WARN);
+        health.setMessage(
+            String.format(
+                "%s of %s assertions are erroring",
+                erroringAssertionUrns.size(), totalAssertionCount));
+        health.setCauses(erroringAssertionUrns);
+        final Long latestErroringAssertionRun =
+            Collections.max(
+                summary.getErroringAssertionDetails().stream()
+                    .map(AssertionSummaryDetails::getLastResultAt)
+                    .toList());
+        health.setReportedAt(latestErroringAssertionRun);
       } else {
         health.setStatus(HealthStatus.PASS);
+        health.setReportedAt(summary.getLastAssertionResultAt());
         health.setMessage("All assertions are passing");
       }
+
+      // Compute statuses by assertion type
+      health.setLatestAssertionStatusByType(getLatestAssertionStatusByType(summary));
+
       return health;
     }
     // No assertions passing or failing. Simply return null.
     return null;
+  }
+
+  private List<AssertionHealthStatusByType> getLatestAssertionStatusByType(
+      AssertionsSummary summary) {
+    final List<AssertionHealthStatusByType> latestAssertionStatusByType = new ArrayList<>();
+    for (AssertionType assertionType : AssertionType.values()) {
+      final AssertionHealthStatusByType assertionHealthStatusByType =
+          new AssertionHealthStatusByType();
+      assertionHealthStatusByType.setType(assertionType);
+
+      // 1. Get the assertion details for each status
+      final List<AssertionSummaryDetails> failingAssertionsForType =
+          summary.getFailingAssertionDetails().stream()
+              .filter(details -> details.getType().equals(assertionType.name()))
+              .toList();
+      final List<AssertionSummaryDetails> erroringAssertionsForType =
+          summary.getErroringAssertionDetails().stream()
+              .filter(details -> details.getType().equals(assertionType.name()))
+              .toList();
+      final List<AssertionSummaryDetails> passingAssertionsForType =
+          summary.getPassingAssertionDetails().stream()
+              .filter(details -> details.getType().equals(assertionType.name()))
+              .toList();
+
+      // 2. Set the overall count of assertions for this type
+      assertionHealthStatusByType.setTotal(
+          failingAssertionsForType.size()
+              + erroringAssertionsForType.size()
+              + passingAssertionsForType.size());
+
+      // 3. Set the status related fields
+      if (failingAssertionsForType.size() > 0) {
+        assertionHealthStatusByType.setStatus(HealthStatus.FAIL);
+        assertionHealthStatusByType.setLastStatusResultAt(
+            Collections.max(
+                failingAssertionsForType.stream()
+                    .map(AssertionSummaryDetails::getLastResultAt)
+                    .toList()));
+        assertionHealthStatusByType.setStatusCount(failingAssertionsForType.size());
+      } else if (erroringAssertionsForType.size() > 0) {
+        assertionHealthStatusByType.setStatus(HealthStatus.FAIL);
+        assertionHealthStatusByType.setLastStatusResultAt(
+            Collections.max(
+                erroringAssertionsForType.stream()
+                    .map(AssertionSummaryDetails::getLastResultAt)
+                    .toList()));
+        assertionHealthStatusByType.setStatusCount(erroringAssertionsForType.size());
+      } else if (passingAssertionsForType.size() > 0) {
+        assertionHealthStatusByType.setStatus(HealthStatus.PASS);
+        assertionHealthStatusByType.setLastStatusResultAt(
+            Collections.max(
+                passingAssertionsForType.stream()
+                    .map(AssertionSummaryDetails::getLastResultAt)
+                    .toList()));
+        assertionHealthStatusByType.setStatusCount(passingAssertionsForType.size());
+      } else {
+        continue;
+      }
+
+      // 4. Add to the list of latest assertion statuses by type
+      latestAssertionStatusByType.add(assertionHealthStatusByType);
+      ;
+    }
+    return latestAssertionStatusByType;
   }
 
   @Nullable
